--- a/app/views/appointments/_appointment.html.erb
+++ b/app/views/appointments/_appointment.html.erb
@@ -100,6 +100,12 @@
         <% end %>
       </dd>
       </div>
+      <% if appointment.video_modality? && !appointment.video_link.blank? %>
+        <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
+          <dt class="text-sm font-medium text-tokanisecondary-600">Video Link</dt>
+          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"><%= link_to(appointment.video_link, appointment.video_link) %></dd>
+        </div>
+      <% end %>
 
     </dl>
   </div>
