--- a/app/views/tokani_agency_creation_mailer/welcome.html.erb
+++ b/app/views/tokani_agency_creation_mailer/welcome.html.erb
@@ -2,4 +2,4 @@
 
 <p>Your agency has been created by a Tokani admin. You will need to follow the link below to set your password and complete your registration.</p>
 
-<p><%= link_to "Reset Password", edit_password_url(@user, reset_password_token: @token, new_account: "true") %></p>
+<p><%= link_to "Finish Setting Up Your Account", edit_password_url(@user, reset_password_token: @token, new_account: "true") %></p>
