--- a/app/views/agency_customer_creation_mailer/welcome.html.erb
+++ b/app/views/agency_customer_creation_mailer/welcome.html.erb
@@ -2,4 +2,4 @@
 
 <p>Your  customer account has been created by <%= AgencyCustomer.find_by(customer_id: @customer.id).agency.name %>. You will need to follow the link below to set your password and complete your registration.</p>
 
-<p><%= link_to "Reset Password", edit_password_url(@user, reset_password_token: @token, new_account: "true") %></p>
+<p><%= link_to "Finish Setting Up Account", edit_password_url(@user, reset_password_token: @token, new_account: "true") %></p>
