--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -1,5 +1,5 @@
 <!-- Off-canvas menu for mobile, show/hide based on off-canvas menu state. -->
-<% if policy(:agency_admin).show_side_nav?(controller_name) %>
+<% if policy(:agency_admin).show_side_nav?(controller_name) || !current_account.agency_detail.nil? %>
   <div class="relative z-40 md:hidden" role="dialog" aria-modal="true">
     <div class="fixed inset-0 bg-gray-600 bg-opacity-75"></div>
     <div class="fixed inset-0 z-40 flex">
