--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -1,5 +1,6 @@
 <!-- Off-canvas menu for mobile, show/hide based on off-canvas menu state. -->
-<% if policy(:agency_admin).show_side_nav?(controller_name) || !current_account.agency_detail.nil? %>
+<% if policy(:agency_admin).show_side_nav?(controller_name) %>
+  <%= controller_name %>
   <div class="relative z-40 md:hidden" role="dialog" aria-modal="true">
     <div class="fixed inset-0 bg-gray-600 bg-opacity-75"></div>
     <div class="fixed inset-0 z-40 flex">
@@ -72,6 +73,7 @@
           <%= link_to root_path, class: "#{dashboard_highlight?} group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
             <i class="fa-regular fa-gauge fa-xl <%= dashboard_highlight_icon? %> mr-3 flex-shrink-0"></i>
             Dashboard
+          <%= controller_name %>
           <% end %>
           <%= link_to appointments_path, data: { action: 'click->toggle#toggle touch->toggle#toggle' }, class: "#{sidenav_highlight?('appointments', ["index", "new"], type: "link")} group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="<%= sidenav_highlight?('appointments', ["index", "new"], type: "icon") %> mr-3 flex-shrink-0 h-6 w-6">
