Fix: Sidebar mobile views
- Fix old navbar showing for site admins
- Fix appointments filters breakpoints
- Add back labels to sidenav
- Update toggle button position near logo
- Use chevron heroicon for toggling sidenav

--- a/app/views/shared/_interpreter_sidenav.html.erb
+++ b/app/views/shared/_interpreter_sidenav.html.erb
@@ -1,67 +1,70 @@
 <!-- To show this sidenav, add current controller to InterpreterPolicy whitelisted_controllers -->
 <% if policy(:interpreter).show_side_nav?(controller_name) %>
   <div data-controller="toggle">
-    <!-- Hamburger menu for mobile -->
+    <!-- Slider for mobile -->
     <div class="block lg:hidden" data-controller="menu">
-      <button type="button" id="sidebar-open" class="flex items-center p-3 text-gray-500 lg:hidden focus:outline-none focus:text-gray-700" data-action="click->menu#toggleMenu">
-        <svg class="w-5 h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Sidebar</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path></svg>
+      <button type="button" id="sidebar-open" class="flex items-center p-3 text-gray-500 lg:hidden -translate-y-10 md:translate-y-0 focus:outline-none focus:text-gray-700" data-action="click->menu#toggleMenu">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+          <title>Sidebar</title>
+          <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+        </svg>
       </button>
     </div>
-    <!-- END/Hamburger menu for mobile -->
+    <!-- END/Slider for mobile -->
 
     <!-- Static sidebar for desktop -->
-    <div class="invisible md:visible md:fixed md:inset-y-0 md:flex md:w-fit md:flex-col" id="slideoverContainer" data-toggle-target="toggleable" data-controller="menu">
+    <div class="invisible md:visible md:fixed md:inset-y-0 md:flex w-64 md:flex-col" id="slideoverContainer" data-toggle-target="toggleable" data-controller="menu">
       <div data-action="click->menu#toggleMenu" id="slideover-bg" class="w-full h-full duration-500 ease-out transition-all inset-0 absolute bg-gray-900 opacity-0"></div>
-      <div id="slideover" class="w-fit absolute overflow-y-auto border-r border-gray-200 bg-gradient-to-r from-tokanisecondary-600 via-tokanisecondary-700 to-tokanisecondary-800 pt-5 duration-300 ease-out transition-all md:h-full h-0 -translate-x-full md:translate-x-0 -translate-y-28 md:-translate-y-0">
+      <div id="slideover" class="z-10 w-64 absolute overflow-y-auto border-r border-gray-200 bg-gradient-to-r from-tokanisecondary-600 via-tokanisecondary-700 to-tokanisecondary-800 pt-5 duration-300 ease-out transition-all md:h-full h-0 -translate-x-full md:translate-x-0 -translate-y-28 md:-translate-y-0">
         <div class="hidden md:block flex flex-shrink-0 items-center px-4">
           <%= image_tag("logo-white.png", class: "h-8 w-auto", alt: "Tokani") %>
         </div>
         <div class="mt-5 flex flex-grow flex-col">
           <nav class="flex-none md:flex-1 space-y-1 px-2 pb-4">
           <div>
-            <%= link_to root_path, class: "#{sidenav_highlight?('interpreters', ["dashboard"], type: "link")} group inline-block md:flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-              <i class="fa-regular fa-gauge fa-xl <%= int_dashboard_highlight_icon? %> m-0 md:mr-3 flex-shrink-0"></i>
-              <span class="hidden md:block">
+            <%= link_to root_path, class: "#{sidenav_highlight?('interpreters', ["dashboard"], type: "link")} group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+              <i class="fa-regular fa-gauge fa-xl <%= int_dashboard_highlight_icon? %> mr-3 flex-shrink-0"></i>
+              <span>
                 Dashboard
               </span>
             <% end %>
           </div>
           <div>
-            <%= link_to appointments_interpreters_path, class: "#{int_appointment_hightlight?} group inline-block md:flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="<%= sidenav_highlight_icon?(controller_name) %> m-0 md:mr-3 flex-shrink-0 h-6">
+            <%= link_to appointments_interpreters_path, class: "#{int_appointment_hightlight?} group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="<%= sidenav_highlight_icon?(controller_name) %> mr-3 flex-shrink-0 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12.75V12A2.25 2.25 0 014.5 9.75h15A2.25 2.25 0 0121.75 12v.75m-8.69-6.44l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z" />
               </svg>
-              <span class="hidden md:block">
+              <span>
                 Appointments
               </span>
             <% end %>
           </div>
           <div>
-            <%= link_to interpreters_availability_path, class: "#{sidenav_highlight?('interpreters', "availability", type: "link")} text-gray-100 hover:bg-gray-50 hover:text-gray-900 group inline-block md:flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="<%= sidenav_highlight?('interpreters', "availability", type: "icon") %> m-0 md:mr-3 flex-shrink-0 h-6 w-6">
+            <%= link_to interpreters_availability_path, class: "#{sidenav_highlight?('interpreters', "availability", type: "link")} text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="<%= sidenav_highlight?('interpreters', "availability", type: "icon") %> mr-3 flex-shrink-0 h-6 w-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5m-9-6h.008v.008H12v-.008zM12 15h.008v.008H12V15zm0 2.25h.008v.008H12v-.008zM9.75 15h.008v.008H9.75V15zm0 2.25h.008v.008H9.75v-.008zM7.5 15h.008v.008H7.5V15zm0 2.25h.008v.008H7.5v-.008zm6.75-4.5h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V15zm0 2.25h.008v.008h-.008v-.008zm2.25-4.5h.008v.008H16.5v-.008zm0 2.25h.008v.008H16.5V15z" />
               </svg>
-              <span class="hidden md:block">
+              <span>
                 Availability
               </span>
             <% end %>
           </div>
           <div>
-            <%= link_to interpreters_time_off_path, class: "#{int_time_off_highlight?} group inline-block md:flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="<%= int_time_off_highlight? %> m-0 md:mr-3 flex-shrink-0 h-6 w-6">
+            <%= link_to interpreters_time_off_path, class: "#{int_time_off_highlight?} group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="<%= int_time_off_highlight? %> mr-3 flex-shrink-0 h-6 w-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25M9 16.5v.75m3-3v3M15 12v5.25m-4.5-15H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
               </svg>
-              <span class="hidden md:block">
+              <span>
                 Time Off
               </span>
             <% end %>
           </div>
-            <a href= "#" class="text-gray-100 hover:bg-gray-50 hover:text-gray-900 group inline-block md:flex items-center px-2 py-2 text-sm font-medium rounded-md">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-gray-100 group-hover:text-gray-500 m-0 md:mr-3 flex-shrink-0 h-6 w-6">
+            <a href= "#" class="text-gray-100 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="text-gray-100 group-hover:text-gray-500 mr-3 flex-shrink-0 h-6 w-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a2.25 2.25 0 00-2.25-2.25H15a3 3 0 11-6 0H5.25A2.25 2.25 0 003 12m18 0v6a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 18v-6m18 0V9M3 12V9m18 0a2.25 2.25 0 00-2.25-2.25H5.25A2.25 2.25 0 003 9m18 0V6a2.25 2.25 0 00-2.25-2.25H5.25A2.25 2.25 0 003 6v3" />
               </svg>
-              <span class="hidden md:block">
-                Time Off
+              <span>
+                Support Links
               </span>
             </a>
           </nav>
