--- a/app/views/interpreters/appointments.html.erb
+++ b/app/views/interpreters/appointments.html.erb
@@ -11,20 +11,20 @@
               <div class="sm:flex sm:items-center">
                 <div class="ml-auto">
                   <div class="flex flex-wrap items-center">
-                    <div class="flex flex-wrap items-center">
+                    <div class="flex flex-wrap items-center sm:justify-center">
                       <!-- Need to add in a statusTarget
                       if appointment statuses are hidden to avoid JS errors -->
                       <%= tag.div data: { appointments_target: "status" } unless AppointmentPolicy.new(current_account, @appointment, current_account_user).show_appointments_statuses? %>
 
                       <% if AppointmentPolicy.new(current_account, @appointment, current_account_user).show_appointments_statuses? %>
                         <!-- Status-->
-                        <div data-controller="dropdown" class="pr-3 relative">
+                        <div data-controller="dropdown" class="grow relative z-0">
                           <a data-action="click->dropdown#toggle click@window->dropdown#hide touch->dropdown#toggle touch@window->dropdown#hide" class="inline-flex items-center select-none" aria-label="Status">
                             <p class="text-sm capitalize" id="statusesTextContainer">Status</p>
                             <svg class="w-4 h-4 ml-2 text-gray-500" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                           </a>
                           <div data-dropdown-target="menu" class="hidden right-4 absolute z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block">
-                            <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md">
+                            <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md z-20">
                               <div data-interpreter-appointments-target="status">
                                 <% @statuses.each do |status| %>
                                   <div class="flex items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
@@ -39,13 +39,13 @@
                       <% end %>
 
                       <!-- Modality-->
-                      <div data-controller="dropdown" class="pr-3 relative">
+                      <div data-controller="dropdown" class="grow relative z-0">
                         <a data-action="click->dropdown#toggle click@window->dropdown#hide touch->dropdown#toggle touch@window->dropdown#hide" class="inline-flex items-center select-none" aria-label="Profile Menu">
                           <p class="text-sm" id="modalitiesTextContainer">Modality</p>
                           <svg class="w-4 h-4 ml-2 text-gray-500" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                         </a>
                         <div data-dropdown-target="menu" class="hidden right-4 absolute z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block" style="width:max-content;">
-                          <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md">
+                          <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md z-20">
                             <div data-interpreter-appointments-target="modality">
                               <% @modalities.each do |modality| %>
                                 <div class="flex items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
@@ -58,7 +58,7 @@
                         </div>
                       </div>
                       <!-- Start & End Date-->
-                      <div class="flex">
+                      <div class="flex justify-center items-center" style="z-index:-1;">
                         <div class="w-40 pr-1">
                           <label class="relative text-gray-400 focus-within:text-gray-600 block">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 absolute top-1/2 transform -translate-y-1/2 left-3">
@@ -74,7 +74,7 @@
                               action: "change->interpreter-appointments#search",
                               flatpickr_alt_format: "%a %m/%d",
                               flatpickr_alt_input: true
-                            }, placeholder: "Start Date", class: "border-none py-2 px-4 bg-slate-50 placeholder-gray-400 text-gray-500 appearance-none w-full block pl-12 focus:outline-none rounded-l-lg",
+                            }, placeholder: "Start Date", class: "border-none py-2 px-4 bg-slate-50 placeholder-gray-400 text-gray-500 appearance-none w-full block pl-12 md:pl-10 text-base md:text-xs focus:outline-none rounded-l-lg",
                             style: "border-top-left-radius:0.5rem;border-bottom-left-radius:0.5rem;" %>
                           </label>
                         </div>
@@ -93,14 +93,14 @@
                               action: "change->interpreter-appointments#search",
                               flatpickr_alt_format: "%a %m/%d",
                               flatpickr_alt_input: true
-                            }, placeholder: "End Date", class: "border-none py-2 px-4 bg-slate-50 placeholder-gray-400 text-gray-500 appearance-none w-full block pl-12 focus:outline-none rounded-l-lg",
+                            }, placeholder: "End Date", class: "border-none py-2 px-4 bg-slate-50 placeholder-gray-400 text-gray-500 appearance-none w-full block pl-12 md:pl-10 text-base md:text-xs focus:outline-none rounded-l-lg",
                             style: "border-top-left-radius:0.5rem;border-bottom-left-radius:0.5rem;" %>
                           </label>
                         </div>
                       </div>
 
-                      <div class="pr-3 relative">
-                        <%= text_field_tag :search_query, nil, placeholder: "Search", class: "inline-block rounded-md border border-gray-200 outline-none px-3 py-2 ml-3 w-full" %>
+                      <div class="grow relative" style="z-index:-1;">
+                        <%= text_field_tag :search_query, nil, placeholder: "Search", class: "inline-block rounded-md border border-gray-200 outline-none px-3 py-2 m-0 md:ml-3 w-full" %>
                       </div>
                     </div>
                   </div>
