--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
   <!-- END/Slider for mobile -->
   <div class="flex items-center flex-shrink-0 m-auto md:mr-6">
     <%= link_to root_path do %>
-      <%= image_tag "logo.png", class: "pl-6 md:0 h-8 w-auto fill-current text-gray-700 hover:text-gray-800" %>
+      <%= image_tag "logo.png", class: "md:0 h-8 w-auto fill-current text-gray-700 hover:text-gray-800" %>
       <span class="sr-only"><%= Jumpstart.config.application_name %></span>
     <% end %>
   </div>
