--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -1,15 +1,25 @@
 <% if policy(:agency_admin).show_side_nav?(controller_name) %>
   <div data-controller="toggle">
+    <!-- Slider for mobile -->
+    <div class="block lg:hidden" data-controller="menu">
+      <button type="button" id="sidebar-open" class="flex items-center -translate-y-14 p-3 text-gray-500 lg:hidden focus:outline-none focus:text-gray-700" data-action="click->menu#toggleMenu">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-black">
+          <title>Sidebar</title>
+          <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+        </svg>
+      </button>
+    </div>
+    <!-- END/Slider for mobile -->
     <!-- Static sidebar for desktop -->
     <div id="slideoverContainer" class="invisible md:visible md:fixed md:inset-y-0 md:flex w-64 md:flex-col" data-toggle-target="toggleable" data-controller="menu">
       <div data-action="click->menu#toggleMenu" id="slideover-bg" class="w-full h-full duration-500 ease-out transition-all inset-0 absolute bg-gray-900 opacity-0"></div>
-      <div id="slideover" class="z-10 w-64 absolute overflow-y-auto border-r border-gray-200 bg-gradient-to-r from-tokaniprimary-600 via-tokaniprimary-700 to-tokaniprimary-800 pt-5 duration-300 ease-out transition-all md:h-full h-0 -translate-x-full md:translate-x-0 -translate-y-16 md:-translate-y-0">
+      <div id="slideover" class="z-10 w-64 absolute overflow-y-auto border-r border-gray-200 bg-gradient-to-r from-tokaniprimary-600 via-tokaniprimary-700 to-tokaniprimary-800 pt-5 duration-300 ease-out transition-all md:h-full h-0 -translate-x-full md:translate-x-0 -translate-y-28 md:-translate-y-0">
         <div class="hidden md:block flex flex-shrink-0 items-center px-4">
           <%= image_tag("logo-white.png", class: "h-8 w-auto", alt: "Tokani") %>
         </div>
-        <div class="text-right">
+        <div class="text-right block lg:hidden">
           <button type="button" data-action="click->menu#toggleMenu">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-3 text-white font-bold">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="lg:hidden w-6 h-6 mr-3 text-white font-bold">
               <title>Sidebar</title>
               <path stroke-linecap="round" stroke-linejoin="round" d="M18.75 19.5l-7.5-7.5 7.5-7.5m-6 15L5.25 12l7.5-7.5" />
             </svg>
