CU-863gg2ktd - Add sortable to appointments table headers

--- a/app/views/interpreters/appointments.html.erb
+++ b/app/views/interpreters/appointments.html.erb
@@ -58,7 +58,7 @@
                         </div>
                       </div>
                       <!-- Start & End Date-->
-                      <div class="flex justify-center items-center" style="z-index:-1;">
+                      <div class="flex justify-center items-center -z-10 md:z-0">
                         <div class="w-40 pr-1">
                           <label class="relative text-gray-400 focus-within:text-gray-600 block">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 absolute top-1/2 transform -translate-y-1/2 left-3">
@@ -99,7 +99,7 @@
                         </div>
                       </div>
 
-                      <div class="grow relative" style="z-index:-1;">
+                      <div class="grow relative -z-10 md:z-0">
                         <%= text_field_tag :search_query, nil, placeholder: "Search", class: "inline-block rounded-md border border-gray-200 outline-none px-3 py-2 m-0 md:ml-3 w-full" %>
                       </div>
                     </div>
