--- a/app/views/appointments/_appointments.html.erb
+++ b/app/views/appointments/_appointments.html.erb
@@ -5,24 +5,16 @@
         <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @appointments, :id, "Ref Numb" %></th>
         <% if AppointmentPolicy.new(current_account, @appointment, current_account_user).show_appointment_customers? %>
           <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">
-            <a data-action="click->appointments#sort" class="inline-flex items-center select-none" aria-label="Sort By">
-              <p class="text-sm uppercase" data-sort-type="customer">Customer</p>
-              <%= hidden_field_tag 'sort_by[customer]', params[:sort_by].try(:[], :customer) %>
-              <svg class="w-4 h-4 ml-2 text-gray-500 ease-in duration-200 <%= params[:sort_by].try(:[], :customer) == "true" ? "rotate-180" : "" %>" id="sort-chevron" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-            </a>
+            <%= sortable @appointments, :customer_id, "Customer" %>
           </th>
         <% end %>
-        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Modality</th>
-        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Language</th>
-        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Duration</th>
+        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @appointments, :modality, "Modality" %></th>
+        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @appointments, :language, "Language" %></th>
+        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @appointments, :duration, "Duration" %></th>
         <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">
-          <a data-action="click->appointments#sort" class="inline-flex items-center select-none" aria-label="Sort By">
-            <p class="text-sm uppercase" data-sort-type="date">Date</p>
-            <%= hidden_field_tag 'sort_by[date]', params[:sort_by].try(:[], :date) %>
-            <svg class="w-4 h-4 ml-2 text-gray-500 ease-in duration-200 <%= params[:sort_by].try(:[], :date) == "true" ? "rotate-180" : "" %>" id="sort-chevron" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-          </a>
+          <%= sortable @appointments, :start_time, "Date" %>
         </th>
-        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Status</th>
+        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @appointments, :status, "Status" %></th>
         <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900"></th>
         <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900"></th>
       </tr>
