--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -82,7 +82,7 @@
                   </div>
                 </div>
                 <!-- Start & End Date-->
-                <div class="flex flex-wrap justify-center items-center" style="z-index:-1;">
+                <div class="flex flex-wrap justify-center items-center -z-10 md:z-0">
                   <div class="w-1/2">
                     <label class="relative text-gray-400 focus-within:text-gray-600 block">
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 absolute top-1/2 transform -translate-y-1/2 left-3">
