--- a/app/views/dashboard/_customer.html.erb
+++ b/app/views/dashboard/_customer.html.erb
@@ -1,6 +1,6 @@
 <!--
   This example requires some changes to your config:
-  
+
   ```
   // tailwind.config.js
   module.exports = {
@@ -115,7 +115,7 @@
 
           <% if @appointments.count == 0 %>
             <div class="mt-10 only:flex flex-col items-center justify-center lg:flex-row">
-                
+
               <div class="flex-1 text-center">
                 <p class="mb-4 h3">Create your first Appointment</p>
                 <%= link_to t("shared.scaffold.new.title", model: "Appointment"), new_appointment_path, class: "btn btn-primary" %>
@@ -179,13 +179,13 @@
                         <% @appointments.each do |appointment| %>
                           <tr class="bg-white">
                             <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
-                              <time datetime="2020-07-11"><%= appointment.ref_number %></time>
+                              <time datetime="2020-07-11">
+                                <%= link_to appointment.ref_number, appointment_path(appointment), data: { turbo: false } %>
+                              </time>
                             </td>
                             <td class="w-full max-w-0 whitespace-nowrap px-6 py-4 text-sm text-gray-900">
                               <div class="flex">
-                                <a href="#" class="group inline-flex space-x-2 truncate text-sm">
-                                  <p class="truncate text-gray-500 group-hover:text-gray-900"><%= appointment.customer.name %></p>
-                                </a>
+                                <p class="truncate text-gray-500 group-hover:text-gray-900"><%= appointment.customer.name %></p>
                               </div>
                             </td>
                             <td class="hidden whitespace-nowrap px-6 py-4 text-sm text-gray-500 md:block">
