--- a/app/views/dashboard/_customer.html.erb
+++ b/app/views/dashboard/_customer.html.erb
@@ -189,7 +189,7 @@
                               </div>
                             </td>
                             <td class="hidden whitespace-nowrap px-6 py-4 text-sm text-gray-500 md:block">
-                              <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800 capitalize"><%= appointment.status %></span>
+                              <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800 capitalize"><%= colored_appointment_status appointment.status %></span>
                             </td>
                             <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
                               <time datetime="2020-07-11"><%= appointment.start_time.strftime("%B %-d at %l:%M %p") %></time>
