--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -89,52 +89,9 @@
             </div>
           </div>
           </br>
-          <!-- <div class="col-span-6 sm:col-span-6 lg:col-span-6">
-            <div class="relative">
-              <div class="absolute inset-0 flex items-center" aria-hidden="true">
-                <div class="w-full border-t border-tokaniaccent-300"></div>
-              </div>
-              <div class="relative flex justify-center">
-                <span class="bg-white px-2 text-lg text-tokaniprimary-600">Interpreter Requests</span>
-              </div>
-            </div>
-          </div> -->
-          <fieldset>
-            <legend class="sr-only">Interpreters</legend>
-            <div class="space-y-5">
-              <div class="relative flex items-start">
-                <div class="flex h-6 items-center">
-                  <input id="small" aria-describedby="small-description" name="plan" type="radio" checked class="h-4 w-4 border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-600">
-                </div>
-                <div class="ml-3 text-sm leading-6">
-                  <label for="small" class="font-medium text-gray-900">General Interpreter Request</label>
-                  <p id="small-description" class="text-gray-500">You can specify gender and/or interpreter type in next step.</p>
-                </div>
-              </div>
-          
-              <div class="relative flex items-start">
-                <div class="flex h-6 items-center">
-                  <input id="medium" aria-describedby="medium-description" name="plan" type="radio" class="h-4 w-4 border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-600">
-                </div>
-                <div class="ml-3 text-sm leading-6">
-                  <label for="medium" class="font-medium text-gray-900">Offer to Specific Interpreters</label>
-                  <p id="medium-description" class="text-gray-500">You will select the interpreters you want to offer the appointment to in the next step.</p>
-                </div>
-              </div>
-          
-              <div class="relative flex items-start">
-                <div class="flex h-6 items-center">
-                  <input id="large" aria-describedby="large-description" name="plan" type="radio" class="h-4 w-4 border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-600">
-                </div>
-                <div class="ml-3 text-sm leading-6">
-                  <label for="large" class="font-medium text-gray-900">Assign an Interpreter</label>
-                  <p id="large-description" class="text-gray-500">You will be able to select the interpreter to assign this appointment to in the next step.</p>
-                </div>
-              </div>
-            </div>
-          </fieldset>
-          <%# render partial: "interpreter_request_fields", locals: {form: form, assigned_int: @assigned_interpreter, general_int: @general_int_requested, specific_int: @specific_int_requested, offered_interpreters: @requested_interpreters || []} %>
+          <%= render partial: "appointment_requests", locals: {form: form, assigned_int: @assigned_interpreter, general_int: @general_int_requested, specific_int: @specific_int_requested, offered_interpreters: @requested_interpreters || []} %>
         </div>
+       
         <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
           <%= form.hidden_field :customer_id, value: @customer.id %>
           <%= form.hidden_field :creator_id, value: current_user.id %>
