Feat: Update TOS & Privacy Policy page

--- a/app/views/users/agreements/_privacy_policy.html.erb
+++ b/app/views/users/agreements/_privacy_policy.html.erb
@@ -1,16 +1,118 @@
-<%# Don't forget to update the Agreement updated timestamp after modifying! %>
-
-<p class="mb-4 text-xl text-gray-700 leading-normal">
-There are several sites that can help with the creation of your privacy policy.
+<p class="mb-4 leading-normal">
+  Effective Date: 2/01/2021
 </p>
 
-<p class="mb-4 text-xl text-gray-700 leading-normal">
-Have your text reviewed by a lawyer before going live.
+<p class="mb-3">
+  Fluency, Inc. collects information about you when you use our website and through
+  other interactions and communications you have with us (collectively, “Services”).
+  The Services are provided by Fluency Inc., and this Privacy Statement applies to
+  information collected and used by Fluency Inc.
 </p>
+<p class="mb-3">
+  Please review this Privacy Policy and the Terms and Conditions (“Terms”) carefully
+  before accessing and using the Services.
+</p>
+<p class="mb-3">
+  When you submit information to or from the Services, you consent to the collection
+  and processing of information as described in this policy. If you do not agree to
+  this policy or the Terms, you are prohibited from using the Services.
+</p>
+<p class="mb-3">
+  1). <b>SCOPE AND APPLICATION</b>. This Privacy Statement (“Statement") describes
+  how Fluency Inc. (“we”, “us”, or “Fluency”), and its affiliated companies obtain,
+  directly or indirectly through your viewing or interaction with Fluency applies to
+  persons who use our Services to schedule and manage appointments (“Users”).
+</p>
+<p class="mb-3">
+  2). <b>COLLECTION OF INFORMATION</b> Information You Provide to Us We collect
+  information you provide directly to us that can be used to identify you (“Personal
 
-<ul>
-  <li><a href="https://github.com/basecamp/policies">Basecamp</a></li>
-  <li><a href="https://www.iubenda.com/en/">Iubenda</a></li>
-  <li><a href="https://termly.io/">Termly</a></li>
-  <li><a href="https://getterms.io/">Get Terms</a></li>
+  Information”), such as when you create or modify your account, request on-
+  demand services, contact customer support, or otherwise communicate with us.
+
+  This information may include but is not limited to: name, age, email, phone
+  number, postal address, notes, location data, which information may be stored,
+  processed, and/or accessed by Fluency for business purposes, including for
+  marketing, lead generation, Service development and improvement, analytics,
+  industry and market research, and such other purposes consistent with Fluency’s
+  legitimate business needs. If you are a requester, you acknowledge that we may
+  collect this Personal Information from you directly or through your Licensee
+  Agency or Authorized Interpreter User. By submitting information to Fluency during
+  the account creation process and/or by using the Services, you consent to such
+  collection and use of personal data. You also acknowledge and agree that if you
+  are a requester, we may collect general patient and/or client health information,
+  such as medical record number, location, and general notes about the health,
+  behavioral health or human service appointment, (“Client Information”).
+</p>
+<p class="mb-3">
+  3). <b>INFORMATION WE COLLECT THROUGH YOUR USE OF OUR
+  SERVICES</b>. When you use our Services, we collect information about you in the
+  following general categories:
+</p>
+<ul class="list-none mb-3">
+  <li class="ml-10">
+    1) Geo-location Information: When you use the Services, including the mobile
+    application services provided to you via our Google and Apple APP
+    accounts you acknowledge and agree that we will collect location-based
+    data from the device you use. We may also derive your approximate
+    location from your IP address.
+  </li>
+  <li class="ml-10">
+    2) Device Information: We may collect information about your device,
+    including, for example, the hardware model, operating system and version,
+    software and file names and versions, preferred language, unique device
+    identifier, advertising identifiers, and serial number.
+  </li>
+  <li class="ml-10">
+    3) Log Information: When you interact with the Services, we collect server
+    logs, which may include but is not limited to information like device IP
+    address, access dates and times and actions, features or pages viewed,
+    crashes and other system activity, type of browser, and the third-party site
+    or service you were using before interacting with our Services.
+  </li>
 </ul>
+<p class="mb-3">
+  4). <b>HOW THIS INFORMATION IS USED</b>. We use Personal and Client information
+  as described in this Privacy Policy or in our Terms or disclosed to you as part of
+  our Platform. For example, we may use your Personal Information to:
+</p>
+<ul class="mb-3">
+  <li>
+    Operate and improve our Services
+  </li>
+  <li>
+    Develop and Beta test new services
+  </li>
+  <li>
+    Respond to your comments and questions
+  </li>
+  <li>
+    Provide and deliver products that you request
+  </li>
+</ul>
+<h3>USER PRIVACY POLICY</h3>
+<ul class="mb-3">
+  <li>
+    Send you related information including confirmations, invoices, technical
+    notes, updates, security alerts, support, critical newsworthy events affecting
+    our industry and administrative messages
+  </li>
+  <li>Communicate with you about the Services</li>
+  <li>
+    Link or combine your information with other personal information we collect
+    through our Services to help understand your needs and provide you better
+    services
+  </li>
+  <li>For our own marketing, promotional and informational purposes</li>
+</ul>
+<p class="mb-3">
+5). <b>CHANGES TO OUR PRIVACY PRACTICES</b><br>
+We reserve the right to change this Privacy Policy and will post a copy of this
+notice on our Website.<br>
+Contact Us - For questions or comments regarding this Privacy Policy please
+contact us by phone at: 800-522-7512, or via email at: Support@gofluently.com
+or by U.S. mail or other courier service to:
+</p>
+<p>Fluency, Inc</p>
+<p>6825 Fair Oaks Blvd, Suite 200</p>
+<p>Carmichael, CA 95608</p>
